# check-foursquare-open-source

./: .bumpversion.cfg  Makefile  README.md  environment.yml  make.cmd  pyproject.toml
config/: config.ini
docsrc/: conf.py  index.rst
notebooks/: check-fsq-open-source.ipynb  notebook-template.ipynb
scripts/: check-available.py  make_data.py  make_pyt_archive.py
src/check_foursquare_open_source/: __init__.py
testing/: test_check_foursquare_open_source.py
